# aegis-node

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  RELEASE_PLAN.md  TODO.md  fix-issue-188.txt  go.mod  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: a11y.yml  conformance.yml  demos-renderer-publish.yml  demos.yml  devbox.yml  go.yml  litertlm-runtime-publish.yml  litertlm.yml  llama.yml  models-publish.yml  release.yml  replay-viewer-snapshot.yml  replay-viewer.yml  rust.yml  schemas.yml  validate.yml  website.yml
cmd/aegis/: main.go  validate.go  validate_test.go
cmd/approver-bot/: main.go
cmd/operator/: main.go
crates/access-log/: Cargo.toml
crates/access-log/src/: error.rs  lib.rs
crates/access-log/tests/: integration.rs
crates/approval-gate/: Cargo.toml
crates/approval-gate/src/: file.rs  grants.rs  lib.rs  mtls.rs  tty.rs  web.rs
crates/approval-gate/tests/: integration.rs  mtls.rs  mtls_conformance.rs  web.rs
crates/cli/: Cargo.toml
crates/cli/src/: evidence.rs  lib.rs  main.rs  pull.rs  run.rs  ui.rs
crates/cli/tests/: evidence_cmmc.rs  pull.rs  pull_real_image.rs  run.rs  runtime.rs
crates/filesystem-gate/: Cargo.toml
crates/filesystem-gate/src/: lib.rs
crates/filesystem-gate/tests/: integration.rs
crates/identity/: Cargo.toml
crates/identity/src/: binding.rs  ca.rs  error.rs  ffi.rs  lib.rs  spiffe.rs  svid.rs
crates/identity/tests/: integration.rs
crates/inference-engine/: Cargo.toml
crates/inference-engine/src/: adversarial.rs  attestation.rs  backend.rs  error.rs  lib.rs  mediator.rs  session.rs  turn.rs
crates/inference-engine/tests/: aggregate_quota.rs  approval_grants.rs  integration.rs  mediator.rs  per_turn_svid.rs  run_multi_turn.rs  run_multi_turn_v2.rs  run_turn.rs
crates/ledger-writer/: Cargo.toml
crates/ledger-writer/examples/: replay-fixture.rs
crates/ledger-writer/src/: error.rs  lib.rs  verify.rs
crates/ledger-writer/tests/: integration.rs  verify_integration.rs
crates/litertlm-backend/: Cargo.toml
crates/litertlm-backend/src/: chat.rs  lib.rs
crates/litertlm-backend/tests/: smoke.rs
crates/litertlm-sys/: Cargo.toml  build.rs
crates/litertlm-sys/src/: lib.rs
crates/llama-backend/: Cargo.toml
crates/llama-backend/src/: chat.rs  lib.rs
crates/llama-backend/tests/: run_turn_real_model.rs  smoke.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: error.rs  lib.rs
crates/mcp-client/tests/: integration.rs
crates/network-gate/: Cargo.toml
crates/policy/: Cargo.toml
crates/policy/src/: aggregate.rs  decision.rs  error.rs  identity_binding.rs  lib.rs  manifest.rs  policy.rs  violation.rs
crates/policy/tests/: conformance.rs  identity_binding.rs  integration.rs
crates/ui-server/: Cargo.toml  build.rs
crates/ui-server/src/: chat.rs  embed.rs  lib.rs
crates/ui-server/src/handlers/: assets.rs  health.rs  manifests.rs  mod.rs  models.rs  sessions.rs  validate.rs
crates/ui-server/tests/: healthz.rs
demos/: .gitattributes  Dockerfile  Makefile  README.md
demos/01-mcp-sandboxed-twice/: README.md  demo.tape  manifest.yaml  prompt.txt  setup.sh
demos/02-read-only-research/: README.md  demo.tape  manifest.yaml  prompt.txt  setup.sh
demos/03-code-review-time-bounded/: README.md  demo.tape  manifest.yaml  prompt.txt  setup.sh
demos/04-customer-support-approval/: README.md  demo.tape  manifest.yaml  prompt.txt  setup.sh
demos/05-tampered-model-halts/: README.md  demo.tape  manifest.yaml  prompt.txt  setup.sh
demos/06-egress-containment/: README.md  demo.tape  manifest.yaml  prompt.txt  setup.sh
demos/_template/: README.md  demo.tape  manifest.yaml  prompt.txt
docs/: CHAT.md  COMPATIBILITY_CHARTER.md  COMPLIANCE_MATRIX.md  DESIGN.md  INSTALL.md  MODEL_MIRRORING.md  RELEASE_PROCESS.md  SUPPLY_CHAIN.md
docs/adrs/: 001-zero-trust-security-review-as-product-specification.md  002-split-language-architecture-rust-and-go.md  003-cryptographic-workload-identity-spiffe-spire.md  004-declarative-yaml-permission-manifest.md  005-human-approval-gate-for-sensitive-actions.md  006-structured-access-log-jsonld-siem-format.md  007-pre-execution-reasoning-trajectory.md  008-network-deny-by-default-at-runtime-level.md  009-read-only-default-with-explicit-write-grants.md  010-deterministic-trajectory-replay-offline-viewer.md  011-hash-chained-tamper-evident-ledger.md  012-policy-as-code-validation.md  013-oci-artifacts-for-model-distribution.md  014-cpu-first-gguf-inference-via-llama-cpp.md  015-three-phase-deployment-roadmap.md  016-open-core-licensing-model.md  017-local-development-environment-devcontainer-mise.md  018-adopt-mcp-protocol-for-agent-tool-boundary.md  019-explicit-write-grant-takes-precedence.md  020-recorded-demo-program.md  021-huggingface-as-upstream-oci-as-trust-boundary.md  022-trust-boundary-format-agnosticism.md  023-litertlm-as-second-inference-backend.md  024-mcp-args-prevalidation.md  025-multi-turn-agent-loop-with-triple-bound-circuit-breaker.md  026-hierarchical-per-turn-ledger-protocol.md  027-aggregate-quota-schema.md  028-adversarial-pre-filter-gate.md  029-task-scoped-ephemeral-approval-grants.md  030-per-turn-spiffe-mtls-attestation.md  031-community-webui-for-local-collaboration.md  032-webui-model-library-and-session-forking.md  033-webui-visual-mcp-server-management.md  034-enterprise-management-dashboard-and-rbac.md  README.md
docs/plans/: design-modernization.md  v0.9.5-ui-implementation.md
docs/research/: multi-turn-agent-loop.md
examples/: README.md
examples/01-hello-world/: README.md  manifest.yaml  prompt.txt  setup.sh
examples/02-mcp-research-assistant/: README.md  manifest.default.yaml  manifest.firecrawl.yaml  prompt.txt  setup.sh
examples/03-customer-support-refund/: README.md  approval.json  manifest.yaml  (+2 more)
proto/: buf.yaml
ui/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  vercel.json
(+142 files in other folders)
