[workspace]
resolver = "2"
members = [
    "crates/inference-engine",
    "crates/network-gate",
    "crates/ledger-writer",
    "crates/identity",
    "crates/cli",
    "crates/access-log",
    "crates/policy",
    "crates/filesystem-gate",
    "crates/approval-gate",
    "crates/mcp-client",
    "crates/llama-backend",
]
# Default member set excludes `llama-backend` so the existing
# `cargo build --workspace` / `cargo test --workspace` paths in
# `rust.yml` don't pay the ~50s C++/CMake build cost on every PR.
# A dedicated `llama.yml` job builds and tests `aegis-llama-backend`
# explicitly.
default-members = [
    "crates/inference-engine",
    "crates/network-gate",
    "crates/ledger-writer",
    "crates/identity",
    "crates/cli",
    "crates/access-log",
    "crates/policy",
    "crates/filesystem-gate",
    "crates/approval-gate",
    "crates/mcp-client",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tosin2013/aegis-node"
authors = ["The Aegis-Node Contributors"]
rust-version = "1.78"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_imports = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
