[package]
name = "aegis-approval-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# F3 mTLS signed-API approval channel (issue #36).
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3"
aegis-identity = { path = "../identity" }
