[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-identity = { path = "../identity" }
aegis-inference-engine = { path = "../inference-engine" }
aegis-ledger-writer = { path = "../ledger-writer" }
aegis-policy = { path = "../policy" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
