[package]
name = "aegis-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
# rlib for downstream Rust consumers (policy, cli, tests). cdylib +
# staticlib for the Go FFI surface (issue #17). Building all three by
# default keeps `cargo test` fast — pay for the cdylib only when
# `cargo build` is invoked.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring", "x509-parser"] }
x509-parser = "0.16"
time = { version = "0.3", features = ["std"] }
hex = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
