[package]
name = "aegis-inference-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aegis-access-log = { path = "../access-log" }
aegis-approval-gate = { path = "../approval-gate" }
aegis-identity = { path = "../identity" }
aegis-ledger-writer = { path = "../ledger-writer" }
aegis-policy = { path = "../policy" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
aegis-approval-gate = { path = "../approval-gate" }
tempfile = "3"
