[package]
name = "aegis-inference-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aegis-access-log = { path = "../access-log" }
aegis-approval-gate = { path = "../approval-gate" }
aegis-identity = { path = "../identity" }
aegis-ledger-writer = { path = "../ledger-writer" }
aegis-mcp-client = { path = "../mcp-client" }
aegis-policy = { path = "../policy" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
# Regex backs the default `RegexHeuristicClassifier` in
# adversarial.rs (ADR-028). `std` + `perf` for the matcher;
# `unicode-case` + `unicode-perl` for case-insensitive matching
# and `\s`/`\w`/`\d` over the IPI patterns. Skips the heavier
# unicode-id / unicode-script tables that aren't relevant to
# adversarial pattern matching.
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-perl"] }
thiserror = "1"
# `time` ties the per-turn SVID lifetime to the multi-turn loop's
# wallclock budget (ADR-030). aegis-identity exposes
# `LocalCa::issue_turn_svid` with a `time::Duration` argument; we
# re-export the dep here so session.rs can construct it without
# pulling in the whole `time` API surface.
time = { version = "0.3", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
aegis-approval-gate = { path = "../approval-gate" }
tempfile = "3"
