[package]
name = "aegis-litertlm-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Safe Rust wrapper around LiteRT-LM for the Aegis-Node runtime (per ADR-023, LiteRT-A)."

[lints]
workspace = true

[dependencies]
aegis-litertlm-sys = { path = "../litertlm-sys" }
thiserror = "1"
# `From<&aegis_policy::manifest::DeterminismKnobs>` for the
# litertlm-backend mirror — same shape as llama-backend so a
# manifest's `inference.determinism` block flows through unchanged
# across both backends. Per LiteRT-A.
aegis-policy = { path = "../policy" }
# Backend / LoadedModel traits + chat-time types live in
# aegis-inference-engine; chat.rs implements them per LiteRT-B.
aegis-inference-engine = { path = "../inference-engine" }
# chat.rs serializes the tool catalog as JSON for the flat-prompt
# path. Mirrors the llama-backend's serde_json usage.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
# Real-model end-to-end test in tests/run_turn_real_model.rs boots a
# full aegis_inference_engine::Session against a live .litertlm —
# needs the local-CA helper for SVID issuance.
aegis-identity = { path = "../identity" }
