[package]
name = "aegis-litertlm-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "FFI bindings to LiteRT-LM's C engine ABI for the Aegis-Node runtime (per ADR-023, LiteRT-A)."
links = "aegis_litertlm_engine_cpu"

[lints]
workspace = true

[build-dependencies]
bindgen = "0.69"
sha2 = "0.10"
hex = "0.4"
