[package]
name = "aegis-ui-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = "0.7"
dirs = "5"
mime_guess = "2"
rust-embed = { version = "8", features = ["debug-embed", "interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"

[dev-dependencies]
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
